add old site FAQ

--- a/pages/about.html
+++ b/pages/about.html
@@ -54,6 +54,15 @@ permalink: /about/
 </ul>
 </p>
 
+<h5 id="old-site">This site looks different. Where's the old site?</h5>
+<p>
+  I re-wrote the site in June 2024. I hadn't updated the old version in quite some time, largely because
+  I didn't like the language and framework that I wrote it in. Re-writing it is an attempt to spark my interest
+  and excitement in the project again.
+  You can still access the old site<!-- --> <a href="https://old.theouterrim.co">here</a>.
+  Note that the old site is no longer being updated and will be shut down at some point in the future.
+</p>
+
 <h5>I don't do GitHub. How else can I
   contact you?</h5>
 <p><a href="mailto:feedback@theouterrim.co">Drop a line</a>.</p>
