--- a/pages/about.html
+++ b/pages/about.html
@@ -67,6 +67,11 @@ permalink: /about/
   contact you?</h5>
 <p><a href="mailto:feedback@theouterrim.co">Drop a line</a>.</p>
 
+<h5>Where did you get the dice icons?</h5>
+<p><a
+    href="https://thealexandrian.net/wordpress/37660/roleplaying-games/star-wars-force-and-destiny-system-cheat-sheet">The
+    Alexandrian.</p>
+
 <h5>Can I donate to the project?</h5>
 <p>Yes, you can! All donations are truly and
   greatly appreciated. You can either visit my<!-- --> <a href="https://patreon.com/duffn">Patreon</a>
