fix about page link

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,7 @@ permalink: /about/
 <h5>Where did you get the dice icons?</h5>
 <p><a
     href="https://thealexandrian.net/wordpress/37660/roleplaying-games/star-wars-force-and-destiny-system-cheat-sheet">The
-    Alexandrian.</p>
+    Alexandrian.</a></p>
 
 <h5>Can I donate to the project?</h5>
 <p>Yes, you can! All donations are truly and
